broken UI of warningPopupCheckbox for nested elements is fixed

--- a/src/styles/PopUp/PopUp.css
+++ b/src/styles/PopUp/PopUp.css
@@ -1126,7 +1126,7 @@ ol li.listItemNumeroUnoLowerRoman {
   font-weight: 400;
   color: #252525;
   font-size: 10px;
-  width: 89px;
+  /* width: 89px; */
 }
 
 .popup-checkbox {
